<resources>
    <string name="app_name">ArtsySearch</string>
    <string name="favorites">Favorites</string>
    <string name="powered_by_artsy">Powered by Artsy</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="loading">loading...</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nationality">Nationality</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="deathDay">Deathday</string>
    <string name="biography">Biography</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_category_available">No Category Available</string>
    <string name="no_artwork_available">No Artwork Available</string>
</resources>