<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/genesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/genesLinerLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/genesHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/category"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genesHeadingContainer"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/genesImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="72dp"
                        android:scaleType="centerCrop" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genesDescriptionHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="12dp"
                    android:text="@string/description"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/genesDescriptionContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/black"

                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout_no_category"
            android:paddingVertical="8dp"
            android:visibility="invisible"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/item_no_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="4dp"
                android:background="@color/dark_grey"
                android:gravity="center_vertical"
                android:text="@string/no_category_available"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textSize="20sp"
                android:textStyle="bold"
              />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>